--- a/src/main/resources/com/example/jsfdemo/messages_pl.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_pl.properties
@@ -1,4 +1,9 @@
 mainWindowTitle=Aplikacja JSF - demo
+agencyEmail=Agencji email
+insuranceName=Nazwa agencji
+insuranceAdd=Dodaj agencje
+addAgency=Dodaj agencje
+agencyName=Nazwa agencji
 action=Akcja
 actionDelete=Usu\u0144
 mainHeading=Zarz\u0105dzanie danymi os\u00F3b
