--- a/src/main/resources/com/example/jsfdemo/messages_en.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_en.properties
@@ -1,7 +1,7 @@
 mainWindowTitle=JSF demo application
 action=Action
 actionDelete=Delete
-mainHeading=Manage some person's data
+mainHeading=Manage data for selling
 
 linkHome=Main page
 
