--- a/src/main/resources/com/example/jsfdemo/messages_pl.properties
+++ b/src/main/resources/com/example/jsfdemo/messages_pl.properties
@@ -6,7 +6,7 @@ addAgency=Dodaj agencje
 agencyName=Nazwa agencji
 action=Akcja
 actionDelete=Usu\u0144
-mainHeading=Zarz\u0105dzanie danymi os\u00F3b
+mainHeading=Zarz\u0105dzanie sprzedaza samochodow
 
 linkHome=Strona g\u0142\u00F3wna
 
